--- a/projectKursHtml/src/index.html
+++ b/projectKursHtml/src/index.html
@@ -3,79 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>MyProject KURS WEB-Verstka</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/reset.min.css">
     <link rel="shortcut icon" href="img/icons8-ок-64.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 offset-lg-3">
-                    <h1 class="header text-center">
-                        <span>Получите видео-инструкцию</span>
-                        <strong class="text-uppercase">Как заработать первый миллион</strong>
-                    </h1>
-                </div>
+        <h1 class="main-header"><span>Получите видео-инструкцию</span><strong>Как заработать свой первый миллион</strong></h1>
+        <div class="main">
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/0IU705W_kIA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="row">
-                <div class="col-lg-6 offset-lg-1">
-                    <div class="video">
-                        <iframe width="100%" height="315" src="https://www.youtube.com/embed/67lK1EEyEco" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form">
-                        <form action="#" class="d-grid gap-2 input-group-lg">
-                            <p class="form-header text-center">Введите ваш емейл</p>
-                            <input type="text" class="form-control" placeholder="Your name">
-                            <input type="text" class="form-control" placeholder="Your email">
-                            <button class="btn btn-primary btn-lg form-btn">Получить инструкцию</button>
-                        </form>
-                    </div>
-                </div>
+            <div class="form">
+                <p>Введите свой емейл</p>
+                <form action="#">
+                   <input type="text" placeholder="Name">
+                   <input type="text" placeholder="Your email">
+                   <button class="form-btn">Получить инструкцию</button> 
+                </form>
             </div>
         </div>
     </div>
     <div class="section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <h2 class="header-section-2 text-center text-uppercase">
-                        Почему тебе надо сделать это сейчас?
-                    </h2>
-                </div>
+        <div class="header-section">
+            <h2>Почему это нужно сделать сейчас?</h2>
+        </div>
+        <div class="feature">
+            <div class="col">
+                <img src="img/1_2913-64x64.png" alt="first feature">
+                <p>Первое приемущество</p>
             </div>
-            <div class="feature text-center">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="feature-box">
-                            <img src="img/1_2913-64x64.png" alt="">
-                            <p>Первое приемущество</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="feature-box">
-                            <img src="img/gory-64x64.png" alt="">
-                            <p>Второе приемущество</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="feature-box">
-                            <img src="img/ikonka-bitkoin-64x64.png" alt="">
-                            <p>Третие приемущество</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="feature-box">
-                            <img src="img/obmen-valyut-64x64.png" alt="">
-                            <p>Четвёртое приемущество</p>
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary btn-lg form-btn">Получить инструкцию</button>
+            <div class="col">
+                <img src="img/gory-64x64.png" alt="second feature">
+                <p>Второе приемущество</p>
+            </div>
+            <div class="col">
+                <img src="img/ikonka-bitkoin-64x64.png" alt="third feature">
+                <p>Третие приемущество</p>
+            </div>
+            <div class="col">
+                <img src="img/obmen-valyut-64x64.png" alt="fourth feature">
+                <p>Четвертое приемущество</p>
             </div>
         </div>
+        <button class="form-btn">Получить инструкцию</button>
     </div>
 </body>
 </html>
